chore: update API search friend, using query instead of param
