# docs/swagger.json
@@ -752,6 +752,13 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "description": "Email of the friend",
+                        "name": "userEmail",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
                         "description": "Authorization: Bearer",
                         "name": "Authorization",
                         "in": "header",
